# GenTKG

./: README.md  evaler.py  inference.py  pyproject.toml
data_utils/: TLR.py  id_words.py  retrieve.py
output/icews14/: confidence.json
